# Agent-Eval-Harness

./: .env.example  .gitignore  README.md  RESOURCES.md  pyproject.toml
.claude/: settings.json
.github/workflows/: eval.yml  real-eval.yml
baselines/: ci.json  claude-v1.json  v1.0.json
datasets/examples/: judge_calibration.jsonl  simple_qa.jsonl  tool_calling.jsonl
examples/: claude_agent.py  degraded_agent.py  ollama_agent.py  stub_agent.py
harness/: __init__.py  __main__.py  baseline.py  cli.py  dataset.py  eval_runner.py  meta_eval.py  report.py  results.py  runner.py  trajectory.py
harness/scorers/: __init__.py  base.py  embedding.py  exact.py  llm_judge.py  regex_scorer.py
scripts/: calibrate_judge.py
tests/: test_dataset.py  test_eval_runner.py  test_llm_judge.py  test_meta_eval.py  test_regression.py  test_report.py  test_scorers.py  test_trajectory.py
