[project]
name = "agent-eval-harness"
version = "0.1.0"
description = "A from-scratch eval harness for AI agents: golden datasets, pluggable scorers, baselines, and CI gates."
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.scripts]
agent-eval = "harness.cli:cli"

[project.optional-dependencies]
# Heavy/optional deps arrive with their build phase (see README Build Phases).
embedding = ["sentence-transformers>=3.0", "numpy>=1.26"]  # Phase 4
judge = ["anthropic>=0.30"]                                # Phase 5
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["harness", "harness.scorers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download/load a real embedding model",
]
